test/undup1.slq

def main(){
	x:=H(0);
	dup(x):= /// error
		x;
}
